--- a/WebApplication1/Views/TeacherPage/List.cshtml
+++ b/WebApplication1/Views/TeacherPage/List.cshtml
@@ -4,6 +4,10 @@
 
 <div class="teacher-list">
     <h2>Our Teachers</h2>
+
+     <!-- A link is added that will direct to another webpage where is a form to add a new teacher-->
+    <a style="margin-bottom:10px;" href="/TeacherPage/New">Add Teacher</a>
+    
     @foreach (cumulative_assingment_1.Models.Teacher Teacher in Model)
     {        
         <div class="teacher-card">
