--- a/WebApplication1/Views/TeacherPage/Show.cshtml
+++ b/WebApplication1/Views/TeacherPage/Show.cshtml
@@ -2,6 +2,12 @@
 
 <div class="teacher-details-container">
 
+    
+    <!-- There is a link "Back to List" lets you go back to the list page -->
+    <!-- Other link "Delete" will direct to another web page confirm if we want to delete the teacher permanently from our database -->
+
+    <a href="/TeacherPage/List">Back to List</a> <a class="alert-warning" href="/TeacherPage/DeleteConfirm/@Model.TeacherId">Delete</a>
+
     <!-- Displaying the details of the selected teacher -->
 
     <h1 class="teacher-name">@Model.TeacherFName @Model.TeacherLName</h1>
