--- a/WebApplication1/Views/CoursesPage/ListCourses.cshtml
+++ b/WebApplication1/Views/CoursesPage/ListCourses.cshtml
@@ -4,6 +4,10 @@
 
 <div class="course-list">
     <h2>Courses We Offer: </h2>
+
+  <!-- A link is added that will direct to another webpage where is a form to add a new course-->
+    <a style="margin-bottom:10px;" href="/CoursesPage/NewCourse">Add Course</a>
+    
     @foreach (cumulative_assingment_1.Models.Course Course in Model)
     {
         <div class="course-card">
