--- a/WebApplication1/Views/CoursesPage/ShowCourses.cshtml
+++ b/WebApplication1/Views/CoursesPage/ShowCourses.cshtml
@@ -2,6 +2,11 @@
 
 <div class="course-details-container">
 
+    <!-- There is a link "Back to List" lets you go back to the list page -->
+    <!-- Other link "Delete" will direct to another web page confirm if we want to delete the course permanently from our database -->
+
+    <a href="/CoursesPage/ListCourses">Back to List</a> <a class="alert-warning" href="/CoursesPage/DeleteConfirmCourse/@Model.CourseId">Delete</a>
+
     <!-- Displaying the details of the selected course -->
 
     <h1 class="course-name">@Model.CourseName</h1>
