--- a/WebApplication1/Views/StudentPage/ListStudent.cshtml
+++ b/WebApplication1/Views/StudentPage/ListStudent.cshtml
@@ -4,6 +4,10 @@
 
 <div class="student-list">
     <h2>Our students</h2>
+
+        <!-- A link is added that will direct to another webpage-->
+    <a style="margin-bottom:10px;" href="/StudentPage/NewStudent">Add Student</a>
+
     @foreach (cumulative_assingment_1.Models.Student Student in Model)
     {
         <div class="student-card">
